--- a/config/hyperion.config.json.example
+++ b/config/hyperion.config.json.example
@@ -1,4 +1,5 @@
 // This is a example config (hyperion.config.json) with comments, in any case you need to create your own one with HyperCon!
+// location of all configs: /etc/hyperion
 // Webpage: https://www.hyperion-project.org
 
 
