--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,10 +116,10 @@ find_package(GitVersion)
 configure_file("${PROJECT_SOURCE_DIR}/HyperionConfig.h.in" "${PROJECT_BINARY_DIR}/HyperionConfig.h")
 include_directories("${PROJECT_BINARY_DIR}")
 
-if(ENABLE_QT5)
-	ADD_DEFINITIONS ( -DENABLE_QT5 )
+if( NOT ENABLE_QT5)
+	#ADD_DEFINITIONS ( -DENABLE_QT5 )
 	#find_package(Qt5Widgets)
-else()
+#else()
 	# Add specific cmake modules to find qt4 (default version finds first available QT which might not be qt4)
 	set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/qt4)
 endif()
