--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -9,8 +9,11 @@ target_link_libraries(hyperiond
 		effectengine
 		jsonserver
 		boblightserver
-		 protoserver
+		protoserver
 )
+if (ENABLE_QT5)
+	target_link_libraries(hyperiond webconfig)
+endif ()
 
 if (ENABLE_DISPMANX)
 	target_link_libraries(hyperiond dispmanx-grabber)
@@ -40,4 +43,4 @@ install ( TARGETS hyperiond DESTINATION "bin" COMPONENT ambilight )
 install ( DIRECTORY ${CMAKE_SOURCE_DIR}/effects     DESTINATION "share/hyperion/" COMPONENT  ambilight )
 install ( DIRECTORY ${CMAKE_SOURCE_DIR}/bin/service DESTINATION "share/hyperion/" COMPONENT  ambilight )
 install ( DIRECTORY ${CMAKE_SOURCE_DIR}/config      DESTINATION "share/hyperion/" COMPONENT  ambilight )
-
+install ( DIRECTORY ${CMAKE_SOURCE_DIR}/assets/webconfig      DESTINATION "share/hyperion/" COMPONENT  ambilight )
