--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -10,10 +10,9 @@ target_link_libraries(hyperiond
 		jsonserver
 		boblightserver
 		protoserver
+		webconfig
+		bonjour
 )
-if (ENABLE_QT5)
-	target_link_libraries(hyperiond webconfig)
-endif ()
 
 if (ENABLE_DISPMANX)
 	target_link_libraries(hyperiond dispmanx-grabber)
@@ -34,10 +33,6 @@ endif ()
 if (ENABLE_AMLOGIC)
 	target_link_libraries(hyperiond amlogic-grabber)
 endif ()
-
-if (ENABLE_ZEROCONF)
-	target_link_libraries(hyperiond bonjour)
-endif()
 
 install ( TARGETS hyperiond DESTINATION "bin" COMPONENT ambilight )
 install ( DIRECTORY ${CMAKE_SOURCE_DIR}/effects     DESTINATION "share/hyperion/" COMPONENT  ambilight )
