--- a/libsrc/bonjour/CMakeLists.txt
+++ b/libsrc/bonjour/CMakeLists.txt
@@ -19,13 +19,8 @@ set(Bonjour_SOURCES
 set(Bonjour_RESOURCES
 )
 
-if(ENABLE_QT5)
 qt5_wrap_cpp(Bonjour_HEADERS_MOC ${Bonjour_QT_HEADERS})
 qt5_add_resources(Bonjour_RESOURCES_RCC ${Bonjour_RESOURCES} OPTIONS "-no-compress")
-else(ENABLE_QT5)
-qt4_wrap_cpp(Bonjour_HEADERS_MOC ${Bonjour_QT_HEADERS})
-qt4_add_resources(Bonjour_RESOURCES_RCC ${Bonjour_RESOURCES} OPTIONS "-no-compress")
-endif(ENABLE_QT5)
 
 add_library(bonjour
 		${Bonjour_HEADERS}
@@ -36,17 +31,29 @@ add_library(bonjour
 		${Bonjour_RESOURCES_RCC}
 )
 
-if(ENABLE_QT5)
 qt5_use_modules(bonjour Widgets Network)
-endif(ENABLE_QT5)
 
 target_link_libraries(bonjour
+		hyperion
+		hyperion-utils
+        ${QT_LIBRARIES})
+
+set(USE_SHARED_AVAHI_LIBS OFF CACHE BOOL "use avahi libraries from system")
+
+if (USE_SHARED_AVAHI_LIBS)
+	target_link_libraries(bonjour
+		dns_sd
+		avahi-client
+		avahi-common
+		avahi-core
+#		avahi-qt4
+		dbus-1)
+else()
+	target_link_libraries(bonjour
 		libdns_sd.a
 		libavahi-client.a
 		libavahi-common.a
 		libavahi-core.a
-		libavahi-qt4.a
-		libdbus-1.a
-		hyperion
-		hyperion-utils
-        ${QT_LIBRARIES})
+#		libavahi-qt4.a
+		libdbus-1.a)
+endif()
