--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(jsonserver)
 add_subdirectory(protoserver)
 add_subdirectory(bonjour)
 add_subdirectory(boblightserver)
+add_subdirectory(udplistener)
 add_subdirectory(leddevice)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
