forgot the modified files

--- a/libsrc/bonjour/CMakeLists.txt
+++ b/libsrc/bonjour/CMakeLists.txt
@@ -31,7 +31,7 @@ add_library(bonjour
 		${Bonjour_RESOURCES_RCC}
 )
 
-qt5_use_modules(bonjour Widgets Network)
+qt5_use_modules(bonjour Network)
 
 target_link_libraries(bonjour
 		hyperion
