--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ SET ( DEFAULT_SPIDEV     OFF )
 SET ( DEFAULT_WS2812BPWM OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_ZEROCONF   ON )
+SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 
 if (APPLE)
 	SET ( DEFAULT_OSX ON )
@@ -36,6 +37,7 @@ else ()
 	elseif ( "${PLATFORM}" STREQUAL "x86" )
 		SET ( DEFAULT_X11        ON )
 		SET ( DEFAULT_FB         ON )
+		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
 	elseif ( "${PLATFORM}" STREQUAL "imx6" )
 		SET ( DEFAULT_FB         ON )
 	endif()
@@ -133,8 +135,14 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++11 -Wall")
 
-find_package(Qt5 COMPONENTS Core Gui Widgets Network REQUIRED)
+SET(QT_MIN_VERSION "5.2.0")
+find_package(Qt5 COMPONENTS Core Gui Network REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}    ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+message( STATUS "Found Qt Version: ${Qt5Core_VERSION}" )
+IF ( "${Qt5Core_VERSION}" VERSION_LESS "${QT_MIN_VERSION}" )
+	message( FATAL_ERROR "Your Qt version is to old! Minimum required ${QT_MIN_VERSION}" )
+ENDIF()
+
 
 #add libusb and pthreads
 find_package(libusb-1.0 REQUIRED)
