--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -40,3 +40,5 @@
 #define HYPERION_VERSION_MINOR "${HYPERION_VERSION_MINOR}"
 #define HYPERION_VERSION_PATCH "${HYPERION_VERSION_PATCH}"
 #define HYPERION_VERSION       "${HYPERION_VERSION_MAJOR}.${HYPERION_VERSION_MINOR}.${HYPERION_VERSION_PATCH}"
+
+#define HYPERION_JSON_VERSION "1.0.0"
