--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -34,4 +34,11 @@
 #cmakedefine ENABLE_PROFILER
 
 // the hyperion build id string
-#define HYPERION_VERSION_ID "${HYPERION_VERSION_ID}"
+#define HYPERION_BUILD_ID "${HYPERION_BUILD_ID}"
+
+#define HYPERION_VERSION_MAJOR "${HYPERION_VERSION_MAJOR}"
+#define HYPERION_VERSION_MINOR "${HYPERION_VERSION_MINOR}"
+#define HYPERION_VERSION_PATCH "${HYPERION_VERSION_PATCH}"
+#define HYPERION_VERSION       "${HYPERION_VERSION_MAJOR}.${HYPERION_VERSION_MINOR}.${HYPERION_VERSION_PATCH}"
+
+#define HYPERION_JSON_VERSION "1.0.0"
