switch to new logger for folowing led devices: LedDeviceAtmo LedDeviceFactory LedDeviceFadeCandy LedDeviceHyperionUsbasp LedDeviceLightpack-hidapi LedDevicePiBlaster LedDeviceWS281x LedRs232Device
leddevice base class defines logger already as protected member _log

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(Leddevice_HEADERS
 )
 
 SET(Leddevice_SOURCES
+	${CURRENT_SOURCE_DIR}/LedDevice.cpp
 	${CURRENT_SOURCE_DIR}/LedDeviceFactory.cpp
 
 	${CURRENT_SOURCE_DIR}/LedRs232Device.cpp
