Added support for sk6812RGBW leds (ab)using the SPI interface.
right now it only uses RGB - white is set to zero

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -79,6 +79,7 @@ if(ENABLE_SPIDEV)
 		${CURRENT_SOURCE_DIR}/LedDeviceP9813.h
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.h
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2812SPI.h
+		${CURRENT_SOURCE_DIR}/LedDeviceSk6812SPI.h
 		${CURRENT_SOURCE_DIR}/LedDeviceAPA102.h
 	)
 	SET(Leddevice_SOURCES
@@ -89,6 +90,7 @@ if(ENABLE_SPIDEV)
 		${CURRENT_SOURCE_DIR}/LedDeviceP9813.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2801.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceWs2812SPI.cpp
+		${CURRENT_SOURCE_DIR}/LedDeviceSk6812SPI.cpp
 		${CURRENT_SOURCE_DIR}/LedDeviceAPA102.cpp
 	)
 endif()
