Another small change to allow -DENABLE_TESTS to compile on osmc with qt5

--- a/test/dispmanx2png/CMakeLists.txt
+++ b/test/dispmanx2png/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(${BCM_INCLUDE_DIRS})
 
 # Configure the use of QT4
 #find_package(Qt4 COMPONENTS QtTest REQUIRED QUIET)
-include(${QT_USE_FILE})
+#include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 link_directories(${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
 
