--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ matrix:
       dist: trusty
       sudo: required
     - os: osx
+      osx_image: xcode8
 before_install:
   - chmod +x ./.travis/travis_install.sh
   - ./.travis/travis_install.sh
