--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-#    - os: osx
-#      osx_image: xcode7.3
+    - os: osx
+      osx_image: xcode7.3
 before_install:
   - chmod +x ./.travis/travis_install.sh
   - ./.travis/travis_install.sh
