--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ IF ( POLICY CMP0026 )
 	CMAKE_POLICY( SET CMP0026 OLD )
 ENDIF()
 
+IF ( POLICY CMP0043 )
+	CMAKE_POLICY( SET CMP0043 OLD )
+ENDIF()
+
 SET ( HYPERION_VERSION_STABLE OFF )
 SET ( HYPERION_VERSION_MAJOR 2 )
 SET ( HYPERION_VERSION_MINOR 0 )
