--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ SET ( DEFAULT_X11        OFF )
 SET ( DEFAULT_SPIDEV     OFF )
 SET ( DEFAULT_WS2812BPWM OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
-SET ( DEFAULT_V4l2       ON )
+SET ( DEFAULT_V4L2       ON )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 
 if (APPLE)
