big kodichecker rework
- use new logger
- 'enable' flag in config
- startable on runtime (atm not stoppable and no reconfigure)
- rename xbmc to kodi

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -12,7 +12,7 @@ add_subdirectory(boblightserver)
 add_subdirectory(udplistener)
 add_subdirectory(leddevice)
 add_subdirectory(utils)
-add_subdirectory(xbmcvideochecker)
+add_subdirectory(kodivideochecker)
 add_subdirectory(effectengine)
 add_subdirectory(grabber)
 add_subdirectory(webconfig)
