--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_install:
   - chmod +x ./.travis/travis_install.sh
   - ./.travis/travis_install.sh
 script:
-  - chmod +x ./.travis/travis_build.sh
+  - chmod +x ./.travis/travis_build.sh ./test/testrunner.sh
   - ./.travis/travis_build.sh
+  - ./test/testrunner.sh
