--- a/libsrc/utils/CMakeLists.txt
+++ b/libsrc/utils/CMakeLists.txt
@@ -45,6 +45,10 @@ add_library(hyperion-utils
 	${CURRENT_HEADER_DIR}/jsonschema/JsonFactory.h
 	${CURRENT_HEADER_DIR}/jsonschema/JsonSchemaChecker.h
 	${CURRENT_SOURCE_DIR}/jsonschema/JsonSchemaChecker.cpp
+
+	${CURRENT_HEADER_DIR}/jsonschema/QJsonFactory.h
+	${CURRENT_HEADER_DIR}/jsonschema/QJsonSchemaChecker.h
+	${CURRENT_SOURCE_DIR}/jsonschema/QJsonSchemaChecker.cpp
 )
 
 qt5_use_modules(hyperion-utils Core)
