--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ SET ( DEFAULT_WS2812BPWM OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_V4L2       ON  )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
+SET ( DEFAULT_TESTS      OFF )
 
 if (APPLE)
 	SET ( DEFAULT_OSX  ON )
@@ -68,6 +69,14 @@ else ()
 		SET ( DEFAULT_X11        ON )
 		SET ( DEFAULT_FB         ON )
 		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+	elseif ( "${PLATFORM}" STREQUAL "x86-dev" )
+		SET ( DEFAULT_X11        ON )
+		SET ( DEFAULT_FB         ON )
+		SET ( DEFAULT_AMLOGIC    ON)
+		SET ( DEFAULT_SPIDEV     ON )
+		SET ( DEFAULT_WS281XPWM  ON )
+		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+		SET ( DEFAULT_TESTS      ON )
 	elseif ( "${PLATFORM}" STREQUAL "imx6" )
 		SET ( DEFAULT_FB         ON )
 	endif()
@@ -106,7 +115,7 @@ message(STATUS "ENABLE_X11 = " ${ENABLE_X11})
 
 SET(ENABLE_QT5 ON)
 
-option(ENABLE_TESTS "Compile additional test applications" OFF)
+option(ENABLE_TESTS "Compile additional test applications" ${DEFAULT_TESTS})
 message(STATUS "ENABLE_TESTS = " ${ENABLE_TESTS})
 
 option(ENABLE_PROFILER "enable profiler capabilities - not for release code" OFF)
