--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -7,7 +7,9 @@ add_subdirectory(hyperion)
 add_subdirectory(blackborder)
 add_subdirectory(jsonserver)
 add_subdirectory(protoserver)
+if(ENABLE_AVAHI)
 add_subdirectory(bonjour)
+endif()
 add_subdirectory(boblightserver)
 add_subdirectory(udplistener)
 add_subdirectory(leddevice)
