--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ SET ( DEFAULT_TESTS      OFF )
 
 if (APPLE)
 	SET ( DEFAULT_OSX    ON )
-	SET ( DEFAULT_V4l2   OFF )
+    SET ( DEFAULT_V4L2   OFF )
 	SET ( DEFAULT_SPIDEV OFF )
 	SET ( DEFAULT_FB     OFF )
 else ()
