improved qt5 detection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 SET ( DEFAULT_TESTS      OFF )
 
 if (APPLE)
+    set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
 	SET ( DEFAULT_OSX    ON )
     SET ( DEFAULT_V4L2   OFF )
 	SET ( DEFAULT_SPIDEV OFF )
