fixed avahi on OS X

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ SET ( DEFAULT_WS2812BPWM OFF )
 SET ( DEFAULT_WS281XPWM  OFF )
 SET ( DEFAULT_V4L2       ON  )
 SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
+SET ( DEFAULT_USE_AVAHI_LIBS  ON )
 SET ( DEFAULT_TESTS      OFF )
 
 if (APPLE)
@@ -35,6 +36,7 @@ if (APPLE)
     SET ( DEFAULT_V4L2   OFF )
 	SET ( DEFAULT_SPIDEV OFF )
 	SET ( DEFAULT_FB     OFF )
+    SET ( DEFAULT_USE_AVAHI_LIBS  OFF )
 else ()
 	if ( NOT DEFINED PLATFORM )
 		if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
