--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -8,6 +8,7 @@ SET(Hyperion_QT_HEADERS
 	${CURRENT_HEADER_DIR}/Hyperion.h
 
 	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.h
+	${CURRENT_HEADER_DIR}/GrabberWrapper.h
 )
 
 SET(Hyperion_HEADERS
@@ -36,6 +37,7 @@ SET(Hyperion_SOURCES
 	${CURRENT_SOURCE_DIR}/MultiColorAdjustment.cpp
 	${CURRENT_SOURCE_DIR}/LinearColorSmoothing.cpp
 	${CURRENT_SOURCE_DIR}/MessageForwarder.cpp
+	${CURRENT_SOURCE_DIR}/GrabberWrapper.cpp
 )
 
 SET(Hyperion_RESOURCES
