--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
+cache:
+    - ccache
+    - directories:
+        - $HOME/brew-cache
 notifications:
-  email: false
-  slack: hyperiondevteam:JHOhorlTVgcYKwT6Tj1nnGou
+    email: false
+    slack: hyperiondevteam:JHOhorlTVgcYKwT6Tj1nnGou
 language: cpp
 matrix:
   include:
@@ -9,10 +13,12 @@ matrix:
       sudo: required
     - os: osx
       osx_image: xcode7.3
+      env:
+        - HOMEBREW_CACHE=$HOME/brew-cache
 before_install:
-  - chmod +x ./.travis/travis_install.sh
-  - ./.travis/travis_install.sh
+    - chmod +x ./.travis/travis_install.sh
+    - ./.travis/travis_install.sh
 script:
-  - chmod +x ./.travis/travis_build.sh ./test/testrunner.sh
-  - ./.travis/travis_build.sh
-  - ./test/testrunner.sh
+    - chmod +x ./.travis/travis_build.sh ./test/testrunner.sh
+    - ./.travis/travis_build.sh
+    - ./test/testrunner.sh
