--- a/src/hyperion-framebuffer/CMakeLists.txt
+++ b/src/hyperion-framebuffer/CMakeLists.txt
@@ -40,4 +40,4 @@ target_link_libraries( ${PROJECT_NAME}
 
 qt5_use_modules(${PROJECT_NAME} Core Gui Network)
 
-install ( TARGETS ${PROJECT_NAME} DESTINATION "bin" COMPONENT ambilight )
+install ( TARGETS ${PROJECT_NAME} DESTINATION "share/hyperion/bin/" COMPONENT "${PLATFORM}" )
