--- a/src/hyperion-x11/CMakeLists.txt
+++ b/src/hyperion-x11/CMakeLists.txt
@@ -31,8 +31,8 @@ add_executable(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}
-	getoptPlusPlus
 	blackborder
+	commandline
 	hyperion-utils
 	protoserver
 	x11-grabber
