--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,55 +30,58 @@ SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 SET ( DEFAULT_USE_AVAHI_LIBS  ON )
 SET ( DEFAULT_TESTS      OFF )
 
+if ( NOT DEFINED PLATFORM )
+	if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
+		SET( PLATFORM "x86")
+	elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" )
+		SET( PLATFORM "rpi")
+		EXEC_PROGRAM( "nproc" OUTPUT_VARIABLE SYSTEM_CPU_CORES )
+		FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
+		STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
+		if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" )
+			SET( PLATFORM "wetek" )
+		elseif( SYSTEM_CPU_CORES GREATER 1 AND "${SYSTEM_CPUINFO}" MATCHES "bcm" )
+			SET( PLATFORM "rpi-pwm" )
+		endif()
+	endif()
+	if ( PLATFORM )
+		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
+	else()
+		message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|wetek|x86>")
+	endif()
+endif()
+
+if ( "${PLATFORM}" STREQUAL "rpi" )
+	SET ( DEFAULT_DISPMANX   ON )
+elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
+	SET ( DEFAULT_DISPMANX   ON )
+	SET ( DEFAULT_WS2812BPWM ON )
+	SET ( DEFAULT_WS281XPWM  ON )
+elseif ( "${PLATFORM}" STREQUAL "wetek" )
+	SET ( DEFAULT_AMLOGIC    ON )
+elseif ( "${PLATFORM}" STREQUAL "x86" )
+	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+elseif ( "${PLATFORM}" STREQUAL "x86-dev" )
+	SET ( DEFAULT_X11        ON )
+	SET ( DEFAULT_AMLOGIC    ON)
+	SET ( DEFAULT_WS281XPWM  ON )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
+	SET ( DEFAULT_TESTS      ON )
+elseif ( "${PLATFORM}" STREQUAL "imx6" )
+	SET ( DEFAULT_FB         ON )
+endif()
+
 if (APPLE)
-    set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
+	set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "/usr/local/opt/qt5")
+	include_directories("/opt/X11/include/")
 	SET ( DEFAULT_OSX    ON )
-    SET ( DEFAULT_V4L2   OFF )
+	SET ( DEFAULT_V4L2   OFF )
 	SET ( DEFAULT_SPIDEV OFF )
 	SET ( DEFAULT_FB     OFF )
-    SET ( DEFAULT_USE_AVAHI_LIBS  OFF )
-else ()
-	if ( NOT DEFINED PLATFORM )
-		if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
-			SET( PLATFORM "x86")
-		elseif ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm" )
-			SET( PLATFORM "rpi")
-			EXEC_PROGRAM( "nproc" OUTPUT_VARIABLE SYSTEM_CPU_CORES )
-			FILE( READ /proc/cpuinfo SYSTEM_CPUINFO )
-			STRING ( TOLOWER "${SYSTEM_CPUINFO}" SYSTEM_CPUINFO )
-			if ( "${SYSTEM_CPUINFO}" MATCHES "amlogic" )
-				SET( PLATFORM "wetek" )
-			elseif( SYSTEM_CPU_CORES GREATER 1 AND "${SYSTEM_CPUINFO}" MATCHES "bcm" )
-				SET( PLATFORM "rpi-pwm" )
-			endif()
-		endif()
-		if ( PLATFORM )
-			message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
-		else()
-			message( FATAL_ERROR "PLATFORM is not defined and could not be evaluated. Set -DPLATFORM=<rpi|pri-pwm|wetek|x86>")
-		endif()
-	endif()
-
-	if ( "${PLATFORM}" STREQUAL "rpi" )
-		SET ( DEFAULT_DISPMANX   ON )
-	elseif ( "${PLATFORM}" STREQUAL "rpi-pwm" )
-		SET ( DEFAULT_DISPMANX   ON )
-		SET ( DEFAULT_WS2812BPWM ON )
-		SET ( DEFAULT_WS281XPWM  ON )
-	elseif ( "${PLATFORM}" STREQUAL "wetek" )
-		SET ( DEFAULT_AMLOGIC    ON )
-	elseif ( "${PLATFORM}" STREQUAL "x86" )
-		SET ( DEFAULT_X11        ON )
-		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
-	elseif ( "${PLATFORM}" STREQUAL "x86-dev" )
-		SET ( DEFAULT_X11        ON )
-		SET ( DEFAULT_AMLOGIC    ON)
-		SET ( DEFAULT_WS281XPWM  ON )
-		SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  ON )
-		SET ( DEFAULT_TESTS      ON )
-	elseif ( "${PLATFORM}" STREQUAL "imx6" )
-		SET ( DEFAULT_FB         ON )
-	endif()
+	SET ( DEFAULT_WS281XPWM  OFF )
+	SET ( DEFAULT_USE_AVAHI_LIBS  OFF )
+	SET ( DEFAULT_USE_SHARED_AVAHI_LIBS  OFF )
 endif ()
 
 # set the build options
